--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-BOT_TOKEN: MTI0NDM3NzY4OTI1MTUxNjUxNg.GVBRpl.PV-TyS3YrwywScZp_H-XqqWXXRru-18dpClV_k
+TOKEN= MTI0NDM3NzY4OTI1MTUxNjUxNg.GVBRpl.PV-TyS3YrwywScZp_H-XqqWXXRru-18dpClV_k
